Added new parameter plotting notebook.

--- a/notebooks/parameters2.ipynb
+++ b/notebooks/parameters2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,6 @@
     "import matplotlib\n",
     "\n",
     "sns.set(style=\"whitegrid\", palette=\"pastel\")\n",
-    "# sns.set(style=\"whitegrid\", palette=sns.color_palette(\"RdBu\", n_colors=2))\n",
     "\n",
     "plt.rc('text', usetex=True)\n",
     "plt.rc('font', family='serif')\n",
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,8 +405,9 @@
     }
    ],
    "source": [
-    "fsm_param_files = '../experiments/fsm-0-1/seed*/outcmaesxrecentbest.dat'\n",
-    "bnn_param_files = '../experiments/bnn-0-1/seed*/outcmaesxrecentbest.dat'\n",
+    "fsm0_param_files = '../experiments/fsm-0-1/seed*/outcmaesxrecentbest.dat'\n",
+    "bnn0_param_files = '../experiments/bnn-0-1/seed*/outcmaesxrecentbest.dat'\n",
+    "tws0_param_files = '../experiments/bnn_twist-0-1/seed*/outcmaesxrecentbest.dat'\n",
     "\n",
     "# fsm_param_files = '../experiments/fsm-30-2/seed*/outcmaesxrecentbest.dat'\n",
     "# bnn_param_files = '../experiments/bnn-30-2/seed*/outcmaesxrecentbest.dat'\n",
@@ -439,7 +439,7 @@
     "\n",
     "# fsm_replicates[0].describe()\n",
     "# fsm_replicates[0].head()\n",
-    "bnn_replicates[0].describe()\n",
+    "# bnn_replicates[0].describe()\n",
     "# bnn_replicates[0].head()"
    ]
   },
