Added eval output.

--- a/paper/references/refs.bib
+++ b/paper/references/refs.bib
@@ -1,3 +1,11 @@
+@InProceedings{Moore.IAS.Robot-localization.2014,
+  author    = {T. Moore and D. Stouch},
+  title     = {A Generalized Extended {K}alman Filter Implementation for the {R}obot {O}perating {S}ystem},
+  booktitle = {{Proceedings of the 13\textsuperscript{th} International Conference on Intelligent Autonomous Systems (IAS-13)}},
+  publisher = {Springer},
+  date      = {2014-07},
+}
+
 @INPROCEEDINGS{Wrobel.2017.SSCI.VSSNN,
 author={M. Yaqoob and B. Wróbel},
 booktitle={2017 IEEE Symposium Series on Computational Intelligence (SSCI)},
