--- a/paper/sections/_1-introduction.tex
+++ b/paper/sections/_1-introduction.tex
@@ -74,7 +74,7 @@ In particular, it is attractive to design a controller that is not a black-box l
 %
 Source code has been made available on GitHub\footnote{\url{https://github.com/anthonyjclark/adabot02-ann}}.
 
-% \vspace{-0.1in}
+% %\vspace{-0.1in}
 
 \begin{figure}[!ht]
     \centering
@@ -84,20 +84,20 @@ Source code has been made available on GitHub\footnote{\url{https://github.com/a
     % \subfloat[]{\fbox{\crule[white]{0.4\columnwidth}{2cm}}}
 
     \subfloat[3D Printed Prototype]{%
-        \includegraphics[width=0.2\textwidth,valign=c]{figures/1-introduction/perspective-image.jpg}%
+        \includegraphics[width=0.4\textwidth,valign=c]{figures/1-introduction/perspective-image.jpg}%
     }\quad
     \subfloat[Simulated Device]{%
-        \includegraphics[width=0.2\textwidth,valign=c]{figures/1-introduction/simulation-climbing.png}%
-        \vphantom{\includegraphics[width=0.2\textwidth,valign=c]{figures/1-introduction/perspective-image.jpg}}%
+        \includegraphics[width=0.4\textwidth,valign=c]{figures/1-introduction/simulation-climbing.png}%
+        \vphantom{\includegraphics[width=0.4\textwidth,valign=c]{figures/1-introduction/perspective-image.jpg}}%
     }
 
-    \vspace{-0.05in}
+    %\vspace{-0.05in}
 
     \caption{Adabot, a UGV with transformable wheels.}
     \label{fig:adabot}
 
-    \vspace{-0.15in}
+    %\vspace{-0.15in}
 
 \end{figure}
 
-% \vspace{-0.1in}
+% %\vspace{-0.1in}
