--- a/paper/sections/_2-related-work.tex
+++ b/paper/sections/_2-related-work.tex
@@ -20,13 +20,13 @@ ER methods have been successfully applied to many different types of robotic sys
 % TODO change this citation
 For example, we have previously used differential evolution to evolve an adaptive neural network for a robotic fish \citep{Clark.GECCO.MFAC.2015}, and \citet{Moore.2017.GECCO.Animat} evolved hierarchical controllers for segmented worm-like animats.
 %
-Although evolution has been regularly utilized at an abstract level to optimize wheeled-robot navigation processes (for example, see~\citet{Gomes.2015.GECCO.Maze}), it has not often been used to directly evolve UGVs, and to the best of our knowledge this is the first study in which the characteristics of a transformable wheel are evolved.
+Although evolution has been regularly utilized at an abstract level to optimize wheeled-robot navigation processes (for example, see~\citet{Gomes.2015.GECCO.Maze}), it has not often been used to directly evolve UGV morphologies, and to the best of our knowledge this is the first study in which the characteristics of a transformable wheel are evolved.
 %
 % However, as identified by \citet{Bongard.2013.CACM.ER}, and in the work presented here, ER methods can be effectively applied to wheeled robots.
 
 
 % Analyze neural networks
-A large number of ER studies utilize ANNs to control mobile robots, including \emph{Evolving Virtual Creatures} \citep{Sims.1994.CGIT.Creatures}, which is considered one the the first ER works.
+A large number of ER studies utilize ANNs to control mobile robots, including \emph{Evolving Virtual Creatures} \citep{Sims.1994.CGIT.Creatures}, which is considered one of the first ER works.
 %
 ANNs  provide several benefits when using an evolutionary method.
 %
