--- a/paper/sections/_3-adabot.tex
+++ b/paper/sections/_3-adabot.tex
@@ -1,16 +1,16 @@
-\vspace{-0.1in}
+%\vspace{-0.1in}
 
 \section{Adabot}
 \label{sec:adabot}
 
-\vspace{-0.1in}
+%\vspace{-0.1in}
 
 % In this section, we describe the prototype Adabot hardware, including the transformable wheel mechanism, along with the simulation environment utilized during evolutionary optimization.
 
 % Hardware
 % \subsection{Hardware}
 % \paragraph{Hardware}
-\vspace{0.1in}
+% \vspace{0.1in}
 \noindent
 \textbf{Hardware:}
 %
@@ -23,7 +23,7 @@ The size of an RPi constrains the minimum dimensions of the Adabot's chassis. Sp
 \tblref{tbl:params-physical} lists all configurable parameters for Adabot's physical characteristics, where
 $\mathit{WheelBase}$ and $\mathit{TrackWidth}$ denote the distance between the front and rear axles and the lateral distance between wheels, respectively, and $\mathit{StrutCount}$ parameter indicates the number of struts per wheel.
 
-\vspace{-0.22in}
+%\vspace{-0.22in}
 
 \begin{table}[hb]
     \centering
@@ -41,7 +41,7 @@ $\mathit{WheelBase}$ and $\mathit{TrackWidth}$ denote the distance between the f
     \end{tabular}
 \end{table}
 
-\vspace{-0.1in}
+% \vspace{-0.1in}
 
 Each of the four wheels is driven by its own DC gear-motor with magnetic encoders.
 %
@@ -55,7 +55,7 @@ Finally, it uses a 2.4 GHz wireless communication module and is powered by a 220
 % Extension
 % \subsection{Extender Mechanism}
 % \paragraph{Extender Mechanism}
-\vspace{0.1in}
+% \vspace{0.1in}
 \noindent
 \textbf{Strut Extension:}
 %
@@ -79,23 +79,23 @@ see our preliminary study~\citep{Clark.2017.SSCI.Adabot}.
 \begin{figure}[!ht]
     \centering
 
-    \vspace{-0.08in}
+    % \vspace{-0.08in}
 
     \includegraphics[width=0.8\columnwidth]{figures/3-adabot/extension-mechanism.png}
 
-    \vspace{-0.15in}
+    % \vspace{-0.15in}
 
     \caption{Illustration of Adabot's wheel extension mechanism, where the struts are fully retracted (left), partially extended (middle), and fully extended (right).}
     \label{fig:wheel-extender}
 
-    \vspace{-0.18in}
+    % \vspace{-0.18in}
 
 \end{figure}
 
 % Simulation
 % \subsection{Simulation}
 % \paragraph{Simulation}
-\vspace{0.1in}
+% \vspace{0.1in}
 \noindent
 \textbf{Simulation:}
 %
@@ -120,6 +120,8 @@ DART is specifically designed for robotics applications,
 and is comparable in speed (if not faster) than common alternatives~\citep{Mouret.2017.SimER.Simulation}.
 %
 % In this study, we do not simulate noise, and we assume that the robot has direct access to its global position and rotation. Essentially, we are mimicking a lab setup with an overhead camera that communicates directly with the robot.
+%
+% In previous work, we used the ROS/Gazebo system for simulation, however, ROS was unnecessary for this study as we were not relying on any of its packages (e.g., \emph{robot_localization}~\cite{Moore.IAS.Robot-localization.2014}).
 
 
 \begin{figure}[!ht]
@@ -128,19 +130,19 @@ and is comparable in speed (if not faster) than common alternatives~\citep{Moure
     \includegraphics[width=0.8\columnwidth]{figures/3-adabot/environment.png}
     % \fbox{\crule[white]{\columnwidth}{2cm}}
 
-    \vspace{-0.12in}
+    % \vspace{-0.12in}
 
     \caption{An example environment including randomly generated obstacles. The current way-point is shown as a dark gray sphere, and the robot starts at the origin facing in the positive x-axis (away from the way-point, along the red axis line).}
     \label{fig:simulation-environment}
 
-    \vspace{-0.15in}
+    % \vspace{-0.15in}
 
 \end{figure}
 
 % Control Properties
 % \subsection{Way-Point Navigation Control}
 % \paragraph{Way-Point Navigation Control}
-\vspace{0.1in}
+% \vspace{0.1in}
 \noindent
 \textbf{Way-Point Navigation Control:}
 %
@@ -156,7 +158,7 @@ For this task, a UGV must visit a set of way-points in sequence.
 % We consider way-point navigation
 
 
-\vspace{0.1in}
+% \vspace{0.1in}
 \noindent
 \textbf{FSM Control:}
 The hand-designed FSMs for this task are depicted in \figref{fig:fsm}.
@@ -178,26 +180,28 @@ Threshold angles are shown in \figref{fig:fsm}(c).
     % \includegraphics[width=0.6\columnwidth]{figures/4-simulation/state-machine.png}
     % \subfloat[]{\fbox{\crule[white]{0.4\columnwidth}{2cm}}}
     \subfloat[Direction Control]{%
-        \includegraphics[width=0.3\textwidth,valign=c]{figures/3-adabot/FSM-direction.png}%
-        \vphantom{\includegraphics[width=0.3\textwidth,valign=c]{figures/3-adabot/scene.png}}%
+        \includegraphics[width=0.45\textwidth,valign=c]{figures/3-adabot/FSM-direction.png}%
+        % \vphantom{\includegraphics[width=0.3\textwidth,valign=c]{figures/3-adabot/scene.png}}%
     }
     \hfil
     \subfloat[Extension Control]{%
-        \includegraphics[width=0.2\textwidth,valign=c]{figures/3-adabot/FSM-strut.png}%
-        \vphantom{\includegraphics[width=0.3\textwidth,valign=c]{figures/3-adabot/scene.png}}%
-    }
-    \hfil
-    \subfloat[Environment Diagram]{%
-        \includegraphics[width=0.3\textwidth,valign=c]{figures/3-adabot/scene.png}%
-        \vphantom{\includegraphics[width=0.3\textwidth,valign=c]{figures/3-adabot/scene.png}}%
+        \includegraphics[width=0.45\textwidth,valign=c]{figures/3-adabot/FSM-strut.png}%
+        % \vphantom{\includegraphics[width=0.3\textwidth,valign=c]{figures/3-adabot/scene.png}}%
     }
 
-    \vspace{-0.08in}
+    % \hfil
+
+    \subfloat[Environment Diagram]{%
+        \includegraphics[width=0.65\textwidth,valign=c]{figures/3-adabot/scene.png}%
+        % \vphantom{\includegraphics[width=0.3\textwidth,valign=c]{figures/3-adabot/scene.png}}%
+    }
+
+    % \vspace{-0.08in}
 
     \caption{(a) The FSM controlling the direction of the robot, (b) the single state controlling wheel struts, and (c) a diagram depicting the angles used to trigger transitions between states.}
     \label{fig:fsm}
 
-    \vspace{-0.15in}
+    % \vspace{-0.15in}
 
 \end{figure*}
 
@@ -208,7 +212,7 @@ To determine when, and by how much, wheel struts should be extended, we use a si
 %
 % This state calculates the expected linear and angular  speed using a simple differential drive model:
 
-\vspace{-0.12in}
+% \vspace{-0.12in}
 
 \begin{align}
   v &= \frac{V_r + V_l}{2},\\
@@ -224,11 +228,13 @@ respectively, and $\mathit{TrackWidth}$ represents the distance between wheels o
 %
 % It compares the expected speed to the actual speeds of the device, which are known exactly in simulation and can be measured accurately using an overhead camera setup in physical experiments, to calculate the scaled (between 0 and 1) absolute error values $v_e$ and $\omega_e$.
 %
-These calculated values are then compared to the measured values, which we have direct access to in simulation.
+These calculated values (expected based on the differential drive model) are then subtracted from the actual linear and angular velocities values.
+%
+The difference value (the error between expected and actual velocities) are then scaled between 0 and 1 to produce $v_e$ and $\omega_e$, which are the scaled linear and angular velocities, respectively.
 %
 Error values are scaled between 0 and 1 and then filtered using exponential smoothing. Finally, they are used in the following equations to calculate the extension amount of all struts:
 
-\vspace{-0.2in}
+% \vspace{-0.2in}
 
 \begin{align}
     \mathit{ext}_v &= m_{\mathit{ext}} \cdot v_e + b_{\mathit{ext}},\\
@@ -242,7 +248,7 @@ where $\mathit{ext}_v$ and $\mathit{ext}_\omega$ denote the extension amount cal
 %
 The final extension amount ($\mathit{ext}$) is based on the maximum of these two values, and is calculated as a percentage of the maximum possible extension ($\mathit{MAXEXT}$).
 %
-In essence, the struts will be extended an amount that is linearly proportional to the current error in speed (maximum between linear and angular error).
+In essence, the struts will be extended by an amount that is linearly proportional to the current error in speed (maximum between linear and angular error).
 %
 Thus, when Adabot encounters an obstacle that blocks it from moving according to the differential drive model, it will extend the struts in an effort to climb over any obstacles.
 
@@ -268,7 +274,7 @@ Thus, when Adabot encounters an obstacle that blocks it from moving according to
         $R.ToForwardThresh$ & (-5) \numrange{-90}{0}\si{\degree}\\
         \bottomrule
     \end{tabular}
-\vspace{-0.2in}
+% \vspace{-0.2in}
 \end{table}
 
 
@@ -290,7 +296,7 @@ Finally, to reduce vibration and potential damage to the wheel struts, the maxim
 % To reduce vibration and potential damage to the wheel struts, the maximum angular rate of the wheels is linearly scaled down from 20~\si{\radian\per\second} to 4~\si{\radian\per\second} when the struts are fully extended.
 
 
-\vspace{0.1in}
+% \vspace{0.1in}
 \noindent
 \textbf{ANN Control:}
 As an alternative to the FSM controller, we evolve an ANN for the same task.
@@ -309,7 +315,7 @@ The genome for our ANN includes 13 values: one integer value representing the ac
 
 % \subsection{Evolution}
 % \paragraph{Evolution}
-\vspace{0.1in}
+% \vspace{0.1in}
 \noindent
 \textbf{Evolution:}
 %
