--- a/paper/sections/_4-results.tex
+++ b/paper/sections/_4-results.tex
@@ -14,14 +14,14 @@ Finally, we discuss principles that can be learned from these experiments.
 %
 Here, Adabot's goal is to visit a set of coordinates (way-points) in sequence.
 %
-During a single simulation, the device has 30 seconds to visit \textbf{four} predefined way-points, but the simulation will terminate as soon as the fourth way-point is reached.
+During a single simulation, the device has 30 ($t_\mathit{max}$) seconds to visit \textbf{four} predefined way-points, but the simulation will terminate as soon as the fourth way-point is reached.
 %
 Fitness is calculated as follows:
 
-\vspace{-0.15in}
+%\vspace{-0.15in}
 
 \begin{align}
-    f &= 2w + (1-\frac{\min[d, d_\mathit{max}]}{d_\mathit{max}}) + \frac{(30 - t)}{30}
+    f &= 2w + (1-\frac{\min[d, d_\mathit{max}]}{d_\mathit{max}}) + \frac{(t_\mathit{max} - t)}{t_\mathit{max}}
 \end{align}
 
 \noindent
@@ -48,7 +48,7 @@ In our first experiment, \emph{FSM-0-1}, we evolve the fifteen parameters found 
 %
 The naming scheme for our experiments indicates the controller type (\emph{FSM} or \emph{ANN}), the maximum number of potential obstacles (0 or 40), and the number of trials per fitness evaluation (1 or 2).
 %
-Plots of fitness vs iteration are show in \figref{fig:fitness-vs-iteration} (this figure shows the fitness values for all four experiments).
+Plots of fitness vs iteration are shown in \figref{fig:fitness-vs-iteration} (this figure shows the fitness values for all four experiments).
 %
 In this first experiment, there are zero obstacles and therefore the environment will always be the same. In later experiments, each fitness evaluation includes two trials with randomly generated obstacles.
 %
@@ -63,12 +63,12 @@ This experiment serves as a convenient baseline with which the others can be com
 
     \includegraphics[width=\columnwidth]{figures/4-results/fitness.png}
 
-    \vspace{-0.1in}
+    %\vspace{-0.1in}
 
     \caption{Plots for the maximum fitness found in each of the four experiments. Shaded regions indicate confidence intervals of one standard deviation from the mean for the 20 replicates of each experiment. The maximum possible fitness is 10, and fitness values above 2 indicate that Adabot was able to reach at least one way-point.}
     \label{fig:fitness-vs-iteration}
 
-    \vspace{-0.1in}
+    %\vspace{-0.1in}
 \end{figure}
 
 
@@ -91,12 +91,12 @@ Although these trajectories look similar, there is one key difference: the ANN a
 
     \includegraphics[width=\columnwidth]{figures/4-results/0-1-best_trajectories.png}
 
-    \vspace{-0.12in}
+    %\vspace{-0.12in}
 
     \caption{Trajectories of the best evolved individual for the first two experiments: FSM-0-1 and ANN-0-1. No obstacles were present for these trajectories.}
     \label{fig:0-1-best-trajectories}
 
-    \vspace{-0.1in}
+    %\vspace{-0.1in}
 \end{figure}
 
 
@@ -117,16 +117,16 @@ Effectively, the ANN can only turn left, however, this is not a problem for the 
 
     \subfloat[]{\includegraphics[width=\columnwidth]{figures/4-results/FSM-0-1-best_speed.png}}
 
-    \vspace{-0.08in}
+    %\vspace{-0.08in}
 
     \subfloat[]{\includegraphics[width=\columnwidth]{figures/4-results/ANN-0-1-best_speed.png}}
 
-    \vspace{-0.08in}
+    %\vspace{-0.08in}
 
     \caption{Left and right wheel speeds for the best evolved solutions for \emph{FSM-0-1} (a) and \emph{ANN-0-1} (b).}
     \label{fig:ANN-0-1-best-speed}
 
-    \vspace{-0.1in}
+    %\vspace{-0.1in}
 \end{figure}
 
 
@@ -144,17 +144,17 @@ Specifically, \emph{WheelBase} and \emph{TrackWidth} should be 8.5~\si{cm} and 1
 
     \includegraphics[width=\columnwidth]{figures/4-results/0-1-best_params.png}
 
-    \vspace{-0.1in}
+    %\vspace{-0.1in}
 
     \caption{Distributions for the evolved fitness values and physical characteristics for the combined final populations of the \emph{FSM-0-1} (left side) and \emph{ANN-0-1} (right side) experiments. The y-axis limits are the parameter limits allowed during evolution.}
     \label{fig:0-1-best-params}
 
-    \vspace{-0.1in}
+    %\vspace{-0.1in}
 
 \end{figure}
 
 
-Finally, \figref{fig:FSM-best-params}(a) plots the distributions for all evolved FSM parameters.
+Finally, \figref{fig:FSM-best-params} plots the distributions for all evolved FSM parameters.
 %
 It is worth noting that in the absence of obstacles, neither the evolved FSMs or ANNs extend the struts.
 %
@@ -174,10 +174,10 @@ Specifically, the threshold values and speeds evolved for the \emph{Left} and \e
 
     \includegraphics[width=\textwidth]{figures/4-results/FSM-0-1-best_params.png}
 
-    \vspace{-0.08in}
+    %\vspace{-0.08in}
 
     % \caption{Distributions for all evolved FSM parameters for the \emph{FSM-0-1} and \emph{FSM-40-2} experiments.}
-    \caption{Distributions for all evolved FSM parameters for the \emph{FSM-0-1} experiment.}
+    \caption{Distributions for all evolved FSM parameters for the \emph{FSM-0-1} experiment. These parameters are described in Figure~\ref{fig:fsm}(a) and Table~\ref{tbl:params-fsm}.}
     \label{fig:FSM-best-params}
 \end{figure*}
 
@@ -227,12 +227,12 @@ The first and second principles match results that we have seen on the physical 
 
     \includegraphics[width=\columnwidth]{figures/4-results/40-2-best_params.png}
 
-    \vspace{-0.07in}
+    %\vspace{-0.07in}
 
     \caption{Distributions for the evolved fitness values and physical characteristics for the combined final populations of the \emph{FSM-40-2} (left side) and \emph{ANN-40-2} (right side) experiments. The y-axis limits are the parameter limits allowed during evolution.}
     \label{fig:40-2-best-params}
 
-    % \vspace{-0.2in}
+    % %\vspace{-0.2in}
 
 \end{figure}
 
@@ -269,16 +269,16 @@ Thus, these behaviors are slower because the struts are required to climb obstac
 
     \subfloat[]{\includegraphics[width=\columnwidth]{figures/4-results/FSM-40-2-best_speed.png}}
 
-    \vspace{-0.08in}
+    %\vspace{-0.08in}
 
     \subfloat[]{\includegraphics[width=\columnwidth]{figures/4-results/ANN-40-2-best_speed.png}}
 
-    \vspace{-0.08in}
+    %\vspace{-0.08in}
 
     \caption{Left and right wheel speeds for the best evolved FSM (a) and ANN (b) in a randomly generated environment that includes obstacles.}
     \label{fig:40-2-best-speed}
 
-    \vspace{-0.2in}
+    %\vspace{-0.2in}
 
 \end{figure}
 
@@ -317,16 +317,16 @@ We have identified two sources of error with the simple model: (1) it does not t
 \begin{figure}[!ht]
     \centering
 
-    \vspace{-0.05in}
+    %\vspace{-0.05in}
 
     \includegraphics[width=\columnwidth]{figures/4-results/ann_map.png}
 
-    \vspace{-0.1in}
+    %\vspace{-0.1in}
 
-    \caption{Heat-maps showing the relationship between input and output for the best evolved ANN. For example, the first row represents the output wheel rate for the left wheels, a light shade indicates that the wheel is at its maximum forward rate, and a dark color indicates that it is at its maximal reverse rate. All input and output values are scaled between 0 and 1.}
+    \caption{Heat-maps showing the relationship between input and output for the left wheels of the best evolved ANN. A light shade indicates that the wheel is at its maximum forward rate, and a dark color indicates that it is at its maximal reverse rate. All input and output values are scaled between 0 and 1. Outputs area only shown for the left wheel has it was the only ANN output that exhibited a variety of different values.}
     \label{fig:ANN-40-2-best-ann-map}
 
-    % \vspace{-0.08in}
+    % %\vspace{-0.08in}
 
 \end{figure}
 
@@ -347,7 +347,7 @@ In summary, regarding the optimization of the Adabot system we found that:
 
 Taking these observations into account, we developed a hybrid two-state controller. The controller is in \emph{Left} when $\alpha_{\mathit{target}}$ is greater than zero and in \emph{Right} otherwise. Equations for these states are as follows:
 
-% \vspace{-0.1in}
+% %\vspace{-0.1in}
 
 \begin{align}
     \alpha_\mathit{scale} &= 2\cdot(1 - \frac{\alpha_{\mathit{target}}}{\pi}) - 1\\
