--- a/paper/references/refs.bib
+++ b/paper/references/refs.bib
@@ -1,3 +1,118 @@
+
+@article{Quinn.2003.IJRR.ParallelComplementaryStrategies,
+  title = {Parallel {{Complementary Strategies}} for {{Implementing Biological Principles}} into {{Mobile Robots}}},
+  volume = {22},
+  issn = {0278-3649, 1741-3176},
+  doi = {10.1177/0278364903022003003},
+  language = {en},
+  number = {3-4},
+  journal = {The International Journal of Robotics Research},
+  author = {Quinn, Roger D. and Nelson, Gabriel M. and Bachmann, Richard J. and Kingsley, Daniel A. and Offi, John T. and Allen, Thomas J. and Ritzmann, Roy E.},
+  month = mar,
+  year = {2003},
+  pages = {169-186}
+}
+
+
+@article{Grand.2004.IJRR.StabilityTractionOptimization,
+  title = {Stability and {{Traction Optimization}} of a {{Reconfigurable Wheel}}-{{Legged Robot}}},
+  volume = {23},
+  issn = {0278-3649, 1741-3176},
+  doi = {10.1177/0278364904047616},
+  language = {en},
+  number = {10-11},
+  journal = {The International Journal of Robotics Research},
+  author = {Grand, Christophe and Benamar, Fa\"iz and Plumet, Fr\'ed\'eric and Bidaud, Philippe},
+  month = oct,
+  year = {2004},
+  pages = {1041-1058},
+  date         = {2004},
+  eprint       = {http://dx.doi.org/10.1177/0278364904047616},
+  journaltitle = {{The International Journal of Robotics Research}},
+  abstract     = {Actively articulated locomotion systems such as hybrid wheel-legged vehicles are a possible way to enhance the locomotion performance of an autonomous mobile robot. In this paper, we address the control of the wheel-legged robot Hylos traveling on irregular sloping terrain. The redundancy of such a system is used to optimize both the balance of traction forces and the tipover stability. The general formulation of this optimization problem is presented, and a suboptimal but computationally efficient solution is proposed. Then, an algorithm to control the robot posture, based on a velocity model, is described. Finally, this algorithm is validated through simulations and experiments that show the capabilities of such a redundantly actuated vehicle to enhance its own safety and autonomy in critical environments. },
+}
+
+
+
+@article{Zheng.2015.AME.DesignAnalysisWheellegged,
+  title = {Design and Analysis of a Wheel-Legged Hybrid Locomotion Mechanism},
+  volume = {7},
+  issn = {1687-8140, 1687-8140},
+  doi = {10.1177/1687814015616908},
+  language = {en},
+  number = {11},
+  journal = {Advances in Mechanical Engineering},
+  author = {Zheng, Change and Liu, Jinhao and Grift, Tony E and Zhang, Zichao and Sheng, Tao and Zhou, Jiangwenjie and Ma, Yuliang and Yin, Ming},
+  month = nov,
+  year = {2015},
+  pages = {168781401561690}
+}
+
+
+
+@article{Wei.2017.JMR.DesignImplementationLeg,
+  title = {Design and {{Implementation}} of a {{Leg}}\textendash{{Wheel Robot}}: {{Transleg}}},
+  volume = {9},
+  issn = {1942-4302},
+  shorttitle = {Design and {{Implementation}} of a {{Leg}}\textendash{{Wheel Robot}}},
+  doi = {10.1115/1.4037018},
+  language = {en},
+  number = {5},
+  journal = {Journal of Mechanisms and Robotics},
+  author = {Wei, Zhong and Song, Guangming and Qiao, Guifang and Zhang, Ying and Sun, Huiyu},
+  month = jun,
+  year = {2017},
+  pages = {051001}
+}
+
+
+
+@article{Chen.2014.ITM.QuattropedLegWheel,
+  title = {Quattroped: {{A Leg}}--{{Wheel Transformable Robot}}},
+  volume = {19},
+  issn = {1083-4435, 1941-014X},
+  shorttitle = {Quattroped},
+  doi = {10.1109/TMECH.2013.2253615},
+  number = {2},
+  journal = {IEEE/ASME Transactions on Mechatronics},
+  author = {Chen, Shen-Chiang and Huang, Ke-Jung and Chen, Wei-Hsi and Shen, Shuan-Yu and Li, Cheng-Hsin and Lin, Pei-Chun},
+  month = apr,
+  year = {2014},
+  pages = {730-742}
+}
+
+
+
+@article{Chen.2017.ITR.TurboQuadNovelLega,
+  title = {{{TurboQuad}}: {{A Novel Leg}}\textendash{{Wheel Transformable Robot With Smooth}} and {{Fast Behavioral Transitions}}},
+  volume = {33},
+  issn = {1552-3098, 1941-0468},
+  shorttitle = {{{TurboQuad}}},
+  doi = {10.1109/TRO.2017.2696022},
+  number = {5},
+  journal = {IEEE Transactions on Robotics},
+  author = {Chen, Wei-Hsi and Lin, Hung-Sheng and Lin, Yun-Meng and Lin, Pei-Chun},
+  month = oct,
+  year = {2017},
+  pages = {1025-1040}
+}
+
+
+
+@article{Clark.2015.BB.EvolutionaryMultiobjectiveDesign,
+  title = {Evolutionary Multiobjective Design of a Flexible Caudal Fin for Robotic Fish},
+  volume = {10},
+  issn = {1748-3190},
+  doi = {10.1088/1748-3190/10/6/065006},
+  number = {6},
+  journal = {Bioinspiration \& Biomimetics},
+  author = {Clark, Anthony J and Tan, Xiaobo and McKinley, Philip K},
+  month = nov,
+  year = {2015},
+  pages = {065006}
+}
+
+
 @InProceedings{Moore.IAS.Robot-localization.2014,
   author    = {T. Moore and D. Stouch},
   title     = {A Generalized Extended {K}alman Filter Implementation for the {R}obot {O}perating {S}ystem},
@@ -63,6 +178,22 @@ abstract = { This paper presents a novel evolutionary optimization strategy base
 }
 
 
+@article{Sims.1994.AL.Evolving3DMorphology,
+  title = {Evolving {{3D Morphology}} and {{Behavior}} by {{Competition}}},
+  volume = {1},
+  issn = {1064-5462, 1530-9185},
+  doi = {10.1162/artl.1994.1.4.353},
+  language = {en},
+  number = {4},
+  journal = {Artificial Life},
+  author = {Sims, Karl},
+  month = jul,
+  year = {1994},
+  pages = {353-372}
+}
+
+
+
 @inproceedings{Sims.1994.CGIT.Creatures,
   title={Evolving virtual creatures},
   author={Sims, Karl},
@@ -72,16 +203,28 @@ abstract = { This paper presents a novel evolutionary optimization strategy base
   organization={ACM}
 }
 
+
+
 @article{Stanley.2002.EC.NEAT,
-  title={Evolving neural networks through augmenting topologies},
-  author={Stanley, Kenneth O and Miikkulainen, Risto},
-  journal={Evolutionary computation},
-  volume={10},
-  number={2},
-  pages={99--127},
-  year={2002},
-  publisher={MIT Press}
+  title = {Evolving {{Neural Networks}} through {{Augmenting Topologies}}},
+  volume = {10},
+  issn = {1063-6560, 1530-9304},
+  doi = {10.1162/106365602320169811},
+  language = {en},
+  number = {2},
+  journal = {Evolutionary Computation},
+  author = {Stanley, Kenneth O. and Miikkulainen, Risto},
+  month = jun,
+  year = {2002},
+  publisher={MIT Press},
+  pages = {99-127}
 }
+
+
+
+
+
+
 
 @article{Hornik.1989.NN.UniversalANN,
   title={Multilayer feedforward networks are universal approximators},
@@ -122,6 +265,24 @@ abstract = { This paper presents a novel evolutionary optimization strategy base
  address = {New York, NY, USA},
  keywords = {empirical study, evolutionary robotics, neuroevolution, novelty search, premature convergence},
 }
+
+
+
+@article{Lehman.2011.EC.AbandoningObjectivesEvolution,
+  title = {Abandoning {{Objectives}}: {{Evolution Through}} the {{Search}} for {{Novelty Alone}}},
+  volume = {19},
+  issn = {1063-6560, 1530-9304},
+  shorttitle = {Abandoning {{Objectives}}},
+  doi = {10.1162/EVCO_a_00025},
+  language = {en},
+  number = {2},
+  journal = {Evolutionary Computation},
+  author = {Lehman, Joel and Stanley, Kenneth O.},
+  month = jun,
+  year = {2011},
+  pages = {189-223}
+}
+
 
 
 @inproceedings{Moore.2017.GECCO.Animat,
@@ -236,33 +397,28 @@ month={Feb},}
   keywords  = {legged locomotion;servomechanisms;Whegs I;abstracted biological principles;biological inspiration;hexapod robot;locomotion control;servos;tripod gait;vehicles mobility;Control systems;DC motors;Intelligent robots;Leg;Legged locomotion;Mobile robots;Payloads;Servomechanisms;Servomotors;Vehicles},
 }
 
-@Article{Saranli.IntJrnRoboRes.RHex.2001,
-  author       = {Uluc Saranli and Martin Buehler and Daniel E. Koditschek},
-  title        = {{RH}ex: A Simple and Highly Mobile Hexapod Robot},
-  volume       = {20},
-  number       = {7},
-  pages        = {616--631},
-  abstract     = {this paper, the authors describe the design and control of RHex, a power autonomous, untethered, compliant-legged hexapod robot. RHex has only six actuators—one motor located at each hip— achieving mechanical simplicity that promotes reliable and robust operation in real-world tasks. Empirically stable and highly maneuverable locomotion arises from a very simple clock-driven, open-loop tripod gait. The legs rotate full circle, thereby preventing the common problem of toe stubbing in the protraction (swing) phase. An extensive suite of experimental results documents the robot’s significant “intrinsic mobility”—the traversal of rugged, broken, and obstacle-ridden ground without any terrain sensing or actively controlled adaptation. RHex achieves fast and robust forward locomotion traveling at speeds up to one body length per second and traversing height variations well exceeding its body clearance. },
-  date         = {2001},
+@article{Saranli.IntJrnRoboRes.RHex.2001,
+  title = {{{RHex}}: {{A Simple}} and {{Highly Mobile Hexapod Robot}}},
+  volume = {20},
+  issn = {0278-3649, 1741-3176},
+  shorttitle = {{{RHex}}},
+  doi = {10.1177/02783640122067570},
+  language = {en},
+  number = {7},
+  journal = {The International Journal of Robotics Research},
+  author = {Saranli, Uluc and Buehler, Martin and Koditschek, Daniel E.},
+  month = jul,
   year = {2001},
-  doi          = {10.1177/02783640122067570},
-  eprint       = {http://dx.doi.org/10.1177/02783640122067570},
+  pages = {616-631},
+  date         = {2001},
   journaltitle = {{The International Journal of Robotics Research}},
+  abstract     = {this paper, the authors describe the design and control of RHex, a power autonomous, untethered, compliant-legged hexapod robot. RHex has only six actuators—one motor located at each hip— achieving mechanical simplicity that promotes reliable and robust operation in real-world tasks. Empirically stable and highly maneuverable locomotion arises from a very simple clock-driven, open-loop tripod gait. The legs rotate full circle, thereby preventing the common problem of toe stubbing in the protraction (swing) phase. An extensive suite of experimental results documents the robot’s significant “intrinsic mobility”—the traversal of rugged, broken, and obstacle-ridden ground without any terrain sensing or actively controlled adaptation. RHex achieves fast and robust forward locomotion traveling at speeds up to one body length per second and traversing height variations well exceeding its body clearance. },
 }
 
-@Article{Grand.IntJrnRoboRes.Reconfig-wheel-legged.2004,
-  author       = {Christophe Grand and Fa{\"{i}}z Benamar and Fr{{e}}d{{e}}ric Plumet and Philippe Bidaud},
-  title        = {Stability and Traction Optimization of a Reconfigurable Wheel-Legged Robot},
-  volume       = {23},
-  number       = {10-11},
-  pages        = {1041--1058},
-  abstract     = {Actively articulated locomotion systems such as hybrid wheel-legged vehicles are a possible way to enhance the locomotion performance of an autonomous mobile robot. In this paper, we address the control of the wheel-legged robot Hylos traveling on irregular sloping terrain. The redundancy of such a system is used to optimize both the balance of traction forces and the tipover stability. The general formulation of this optimization problem is presented, and a suboptimal but computationally efficient solution is proposed. Then, an algorithm to control the robot posture, based on a velocity model, is described. Finally, this algorithm is validated through simulations and experiments that show the capabilities of such a redundantly actuated vehicle to enhance its own safety and autonomy in critical environments. },
-  date         = {2004},
-  year = {2004},
-  doi          = {10.1177/0278364904047616},
-  eprint       = {http://dx.doi.org/10.1177/0278364904047616},
-  journaltitle = {{The International Journal of Robotics Research}},
-}
+
+
+
+
 
 @InProceedings{Eich.SSRR.Stair-climb-SAR.2008,
   author    = {M. Eich and F. Grimminger and F. Kirchner},
@@ -303,20 +459,25 @@ month={Feb},}
   journaltitle = {{Advances in Mechanical Engineering}},
 }
 
-@Article{Kenneally.IEEERobAutLetters.Legged-robots.2016,
-  author       = {G. Kenneally and A. De and D. E. Koditschek},
-  title        = {Design Principles for a Family of Direct-Drive Legged Robots},
-  volume       = {1},
-  number       = {2},
-  pages        = {900--907},
-  issn         = {2377-3766},
-  abstract     = {This letter introduces Minitaur, a dynamically running and leaping quadruped, which represents a novel class of direct-drive (DD) legged robots. We present a methodology that achieves the well-known benefits of DD robot design (transparency, mechanical robustness/efficiency, high-actuation bandwidth, and increased specific power), affording highly energetic behaviors across our family of machines despite severe limitations in specific force. We quantify DD drivetrain benefits using a variety of metrics, compare our machines' performance to previously reported legged platforms, and speculate on the potential broad-reaching value of “transparency” for legged locomotion.},
-  date         = {2016-07},
+@article{Kenneally.IEEERobAutLetters.Legged-robots.2016,
+  title = {Design {{Principles}} for a {{Family}} of {{Direct}}-{{Drive Legged Robots}}},
+  volume = {1},
+  issn = {2377-3766, 2377-3774},
+  doi = {10.1109/LRA.2016.2528294},
+  number = {2},
+  journal = {IEEE Robotics and Automation Letters},
+  author = {Kenneally, Gavin and De, Avik and Koditschek, D. E.},
+  month = jul,
   year = {2016},
-  doi          = {10.1109/LRA.2016.2528294},
+  pages = {900-907},
   journaltitle = {{IEEE Robotics and Automation Letters}},
+  date         = {2016-07},
   keywords     = {legged locomotion;DD drivetrain;DD legged robots;DD robot design;direct-drive legged robots;legged locomotion;legged platforms;potential broad-reaching value;Actuators;Couplings;Force;Kinematics;Legged locomotion;Torque;Mechanism Design of Mobile Robots;Multilegged Robots;Novel Actuators for Natural Machine Motion},
+  abstract     = {This letter introduces Minitaur, a dynamically running and leaping quadruped, which represents a novel class of direct-drive (DD) legged robots. We present a methodology that achieves the well-known benefits of DD robot design (transparency, mechanical robustness/efficiency, high-actuation bandwidth, and increased specific power), affording highly energetic behaviors across our family of machines despite severe limitations in specific force. We quantify DD drivetrain benefits using a variety of metrics, compare our machines' performance to previously reported legged platforms, and speculate on the potential broad-reaching value of “transparency” for legged locomotion.},
 }
+
+
+
 
 @InProceedings{Mandow.IROS.Experimental-skid-steer.2007,
   author    = {A. Mandow and J. L. Martinez and J. Morales and J. L. Blanco and A. Garcia-Cerezo and J. Gonzalez},
@@ -331,24 +492,31 @@ month={Feb},}
   keywords  = {mobile robots;motion control;robot kinematics;Pioneer P3-AT;dead-reckoning;experimental kinematics;instantaneous rotation centers;off-the-shelf mobile robots;real-time motion control;research robotic platform;wheeled skid-steer mobile robots;Intelligent robots;Kinematics;Mobile robots;Motion control;Tires;Turning;Vehicle driving;Vehicle dynamics;Velocity control;Wheels},
 }
 
-@Article{Silva.EvolComp.Issues-ER.2016,
-  author       = {Silva, Fernando and Duarte, Miguel and Correia, Lu{\i}s and Oliveira, Sancho Moura and Christensen, Anders Lyhne},
-  title        = {Open Issues in Evolutionary Robotics},
-  volume       = {24},
-  number       = {2},
-  pages        = {205--236},
-  issn         = {1063-6560},
+
+@article{Silva.EvolComp.Issues-ER.2016,
+  title = {Open {{Issues}} in {{Evolutionary Robotics}}},
+  volume = {24},
+  issn = {1063-6560, 1530-9304},
+  doi = {10.1162/EVCO_a_00172},
+  language = {en},
+  number = {2},
+  journal = {Evolutionary Computation},
+  author = {Silva, Fernando and Duarte, Miguel and Correia, Lu\'is and Oliveira, Sancho Moura and Christensen, Anders Lyhne},
+  month = jun,
+  year = {2016},
+  pages = {205-236},
   acmid        = {2979070},
   date         = {2016-06},
-  year = {2016},
-  doi          = {10.1162/EVCO_a_00172},
-  issue_date   = {Summer 2016},
   journaltitle = {{Evolutionary Computation}},
   keywords     = {Evolutionary robotics, autonomous robots, bootstrap problem, controller synthesis, deception, genomic encoding, online evolution, reality gap, research practices},
   location     = {Cambridge, MA, USA},
   numpages     = {32},
   publisher    = {MIT Press},
 }
+
+
+
+
 
 @InProceedings{Quigley.ICRAOSS.ROS.2009,
   author    = {Morgan Quigley and Ken Conley and Brian P. Gerkey and Josh Faust and Tully Foote and Jeremy Leibs and Rob Wheeler and Andrew Y. Ng},
@@ -357,6 +525,23 @@ month={Feb},}
   date      = {2009-05},
   year = {2009},
 }
+
+
+@article{Cousins.2010.IRAM.WelcomeROSTopics,
+  title = {Welcome to {{ROS Topics}}},
+  volume = {17},
+  issn = {1070-9932},
+  doi = {10.1109/MRA.2010.935808},
+  number = {1},
+  journal = {IEEE Robotics \& Automation Magazine},
+  author = {Cousins, Steve},
+  month = mar,
+  year = {2010},
+  pages = {13-14}
+}
+
+
+
 
 @InProceedings{Koenig.IROS.Gazebo.2004,
   author    = {N. Koenig and A. Howard},
@@ -441,19 +626,27 @@ eprint = {
     abstract = { Over the last two decades the research and development of legged locomotion robots has grown steadily. Legged systems present major advantages when compared with ‘traditional’ vehicles, because they allow locomotion in inaccessible terrain to vehicles with wheels and tracks. However, the robustness of legged robots, and especially their energy consumption, among other aspects, still lag behind mechanisms that use wheels and tracks. Therefore, in the present state of development, there are several aspects that need to be improved and optimized. Keeping these ideas in mind, this paper presents the review of the literature of different methods adopted for the optimization of the structure andlocomotion gaits of walking robots. Among the distinct possible strategies often used for these tasks are referred approaches such as the mimicking of biological animals, the use of evolutionary schemes to find the optimal parameters and structures, the adoption of sound mechanical design rules, and the optimization of power-based indexes. }
 }
 
-@ARTICLE{Kim.TransRobo.Wheel-transformer.2014,
-author={Y. S. Kim and G. P. Jung and H. Kim and K. J. Cho and C. N. Chu},
-journal={{IEEE Transactions on Robotics}},
-title={Wheel Transformer: A Wheel-Leg Hybrid Robot With Passive Transformable Wheels},
-year={2014},
-volume={30},
-number={6},
-pages={1487-1498},
+
+@article{Kim.2014.ITR.WheelTransformerWheelLeg,
+  title = {Wheel {{Transformer}}: {{A Wheel}}-{{Leg Hybrid Robot With Passive Transformable Wheels}}},
+  volume = {30},
+  issn = {1552-3098, 1941-0468},
+  shorttitle = {Wheel {{Transformer}}},
+  doi = {10.1109/TRO.2014.2365651},
+  number = {6},
+  journal={{IEEE Transactions on Robotics}},
+  author = {Kim, Yoo-Seok and Jung, Gwang-Pil and Kim, Haan and Cho, Kyu-Jin and Chu, Chong-Nam},
+  month = dec,
+  year = {2014},
+  pages = {1487-1498},
 abstract={We report on the design, optimization, and performance evaluation of a new wheel-leg hybrid robot. This robot utilizes a novel transformable wheel that combines the advantages of both circular and legged wheels. To minimize the complexity of the design, the transformation process of the wheel is passive, which eliminates the need for additional actuators. A new triggering mechanism is also employed to increase the transformation success rate. To maximize the climbing ability in legged-wheel mode, the design parameters for the transformable wheel and robot are tuned based on behavioral analyses. The performance of our new development is evaluated in terms of stability, energy efficiency, and the maximum height of an obstacle that the robot can climb over. With the new transformable wheel, the robot can climb over an obstacle 3.25 times as tall as its wheel radius, without compromising its driving ability at a speed of 2.4 body lengths/s with a specific resistance of 0.7 on a flat surface.},
 keywords={legged locomotion;circular wheels;legged wheel mode;legged wheels;passive transformable wheels;transformation process;triggering mechanism;wheel leg hybrid robot;wheel transformer;Legged locomotion;Mobile robots;Torque;Wheels;Legged robots;mechanism design;search and rescue (SAR) robots;transformable wheel;wheeled robots},
-doi={10.1109/TRO.2014.2365651},
-ISSN={1552-3098},
-month={Dec},}
+}
+
+
+
+
+
 
 @INPROCEEDINGS{Wei.ICIA.Transleg.2016,
 author={Z. Wei and G. Song and Y. Zhang and H. Sun and G. Qiao},
