--- a/paper/sections/_1-introduction.tex
+++ b/paper/sections/_1-introduction.tex
@@ -26,7 +26,13 @@ Ensuring that a UGV can handle many different types of terrain is an ongoing cha
 %
 Researchers have invented several different methods for addressing the issue of mobility in varied terrain.
 %
-Specifically, robots have been designed with treaded wheels, tracks, legged-wheels (wheels are rimless, wheel spokes make contact with the ground), wheeled-legs (wheels are on the end of legs and the suspension is potentially actively actuated), and transformable wheels~\citep{Saranli.IntJrnRoboRes.RHex.2001,Quinn.IROS.Whegs.2002,Eich.SSRR.Stair-climb-SAR.2008,Haldane.ICRA.VelociRoACH.2013,Kenneally.IEEERobAutLetters.Legged-robots.2016}.
+Specifically, robots have been designed with
+treaded wheels,
+tracks,
+legs~\citep{Haldane.ICRA.VelociRoACH.2013},
+legged-wheels (wheels are rimless, wheel spokes make contact with the ground)~\citep{Saranli.IntJrnRoboRes.RHex.2001,Quinn.IROS.Whegs.2002,Eich.SSRR.Stair-climb-SAR.2008,Kenneally.IEEERobAutLetters.Legged-robots.2016},
+wheeled-legs (wheels are on the end of legs and the suspension is potentially actively actuated)~\citep{Grand.2004.IJRR.StabilityTractionOptimization,Zheng.2015.AME.DesignAnalysisWheellegged,Smith.IROS.Tri-wheel.2015}, and
+transformable wheels~\citep{Kim.2014.ITR.WheelTransformerWheelLeg,Chen.2014.ITM.QuattropedLegWheel,Chen.2017.ITR.TurboQuadNovelLega,Wei.2017.JMR.DesignImplementationLeg}.
 %
 Although these systems provide an advantage over traditional wheeled robots, optimization is not performed in the vast majority of these studies.
 %
