--- a/paper/sections/_2-related-work.tex
+++ b/paper/sections/_2-related-work.tex
@@ -18,15 +18,15 @@ In the field of evolutionary robotics (ER), an evolutionary algorithm (EA) optim
 ER methods have been successfully applied to many different types of robotic systems (aerial, aquatic, walking, etc.).
 %
 % TODO change this citation
-For example, we have previously used differential evolution to evolve an adaptive neural network for a robotic fish \citep{Clark.GECCO.MFAC.2015}, and \citet{Moore.2017.GECCO.Animat} evolved hierarchical controllers for segmented worm-like animats.
+For example, we have previously used differential evolution to evolve adaptive neural networks and morphologies for a robotic fish \citep{Clark.GECCO.MFAC.2015,Clark.2015.BB.EvolutionaryMultiobjectiveDesign}, and \citet{Moore.2017.GECCO.Animat} evolved hierarchical controllers for segmented worm-like animats.
 %
-Although evolution has been regularly utilized at an abstract level to optimize wheeled-robot navigation processes (for example, see~\citet{Gomes.2015.GECCO.Maze}), it has not often been used to directly evolve UGV morphologies, and to the best of our knowledge this is the first study in which the characteristics of a transformable wheel are evolved.
+Although evolution has been regularly utilized at an abstract level to optimize wheeled-robot navigation processes (for example, see \citet{Gomes.2015.GECCO.Maze} and \citet{Lehman.2011.EC.AbandoningObjectivesEvolution}), it has not often been used to directly evolve UGV morphologies, and to the best of our knowledge this is the first study in which the characteristics of a transformable wheel are evolved.
 %
 % However, as identified by \citet{Bongard.2013.CACM.ER}, and in the work presented here, ER methods can be effectively applied to wheeled robots.
 
 
 % Analyze neural networks
-A large number of ER studies utilize ANNs to control mobile robots, including \emph{Evolving Virtual Creatures} \citep{Sims.1994.CGIT.Creatures}, which is considered one of the first ER works.
+A large number of ER studies utilize ANNs to control mobile robots, including \emph{Evolving Virtual Creatures} \citep{Sims.1994.AL.Evolving3DMorphology}, which is considered one of the first ER works.
 %
 ANNs  provide several benefits when using an evolutionary method.
 %
